--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CLI regexp replacement for files with lookahead and backreference to matching groups in the replacement.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -13,7 +13,8 @@
     "rexreplace": "./rexreplace-cli.js"
   },
   "scripts": {
-    "test": "npm -g install ./ && bash test.sh"
+    "test": "npm -g install ./ && bash test.sh",
+    "pretest": "node -e 'file=`rexreplace-cli.js`;fs = require(`fs`);fs.writeFileSync(file,fs.readFileSync(file,`utf8`).replace(/^(const version = `).*?(?=`;)/mi,String.fromCharCode(36,49)+require(`./package.json`).version));'"
   },
   "keywords": [
     "regexp",
@@ -23,10 +24,10 @@
     "regular",
     "expression"
   ],
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "chalk": "^1.1.3",
+    "globs": "^0.1.3",
     "yargs": "^7.0.2"
   }
 }
