--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "CLI regexp replacement for files with lookahead and backreference to matching groups in the replacement.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -10,7 +10,8 @@
     "url": "https://github.com/mathiasrw/rexreplace/"
   },
   "bin": {
-    "rexreplace": "./rexreplace-cli.js"
+    "rexreplace": "./rexreplace-cli.js",
+    "rr": "./rexreplace-cli.js"
   },
   "scripts": {
     "test": "npm -g install ./ && bash test.sh",
