--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Friendly CLI regexp search and replace in files.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -14,9 +14,9 @@
     "rr": "bin/rexreplace.cli.js"
   },
   "scripts": {
-  	"test:bin": "npm -g install ./ && cd test && bash test.sh && cd ..",
+    "test:bin": "npm -g install ./ && cd test && bash test.sh && cd ..",
     "test": "npm run build && npm run test:bin",
-  	"build":"babel src -d bin",
+    "build": "babel src -d bin",
     "postbuild": "node -e \"file='bin/rexreplace.cli.js';fs = require('fs');fs.writeFileSync(file,fs.readFileSync(file,'utf8').replace('@VERSION_NUMBER',require('./package.json').version))\""
   },
   "keywords": [
@@ -30,7 +30,8 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0"
+    "babel-preset-es2015": "^6.24.0",
+    "happiness": "^7.1.2"
   },
   "dependencies": {
     "chalk": "^1.1.3",
