--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rexreplace",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Search and dynamicly replace text in files",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
-  "main": "dist/multiversion.core.js",
+  "main": "build/multiversion.core.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/mathiasrw/rexreplace/"
@@ -14,7 +14,7 @@
     "rr": "build/multiversion.cli.js"
   },
   "scripts": {
-    "test": "npm run build && npm run test-js && npm run test-cli",
+    "test": "npm run test-js && npm run build && npm run test-cli",
     "prebuild": "rm -fr build && mkdir build build/ES6 && cp src/multiversion.core.js build/multiversion.core.js && cp src/multiversion.cli.js build/multiversion.cli.js && node -e \"file='src/core.js';fs = require('fs');fs.writeFileSync(file,fs.readFileSync(file,'utf8').replace(/(const version = \\')[^\\']+/m,'\\$1'+require('./package.json').version))\"",
     "build": "browserify --node src/cli.js -o build/ES6/rexreplace.cli.bundle.js && browserify --node src/core.js  -o build/ES6/rexreplace.core.bundle.js",
     "postbuild": "babel build/ES6 -d build/ES5",
