--- a/.bithoundrc
+++ b/.bithoundrc
@@ -1,19 +1,13 @@
 {
   "ignore": [
-    "**/**-min.**",
-    "**/**.min.**",
-    "**/**.bundle.**",
-    "**/**.file",
-    "**/**.test",
-    "build/**",
-    "legacy/**",
-    "lib/**",
-    "test/**",
-  ],
-  "test": [
-    "**/test/**",
-  ],
-  "critics": {
-    "wc": { "limit": 5000 }
-  }
-}i
+    "*-min.*",
+    "*.min.*",
+    "*.bundle.*",
+    "*.file",
+    "*.test",
+    "/build/**",
+    "/legacy/**",
+    "/lib/**",
+    "/test/**",
+  ]
+}
