--- a/legacy/package.json
+++ b/legacy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rreplace",
-  "version": "2.0.0",
-  "description": "Regex replace in a file from CLI",
+  "version": "2.0.1",
+  "description": "Regex replace in a file from CLI.",
   "main": "rreplace.js",
   "scripts": {
     "test": "npm install -g ./ && bash test.sh"
