Show options in table

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "Flexible CLI regex replace in files.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -21,7 +21,9 @@
     "test-js": "echo todo: async mocha",
     "test-cli": "npm -g install ./ && bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
-    "publish": "git pull && npm test && npm publish && git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag"
+    "prepack": "git pull && npm test ",
+    "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag",
+    "options.md":"rr -h | rr '^[\\s\\S]*Options:([\\s\\S]*)Examples:[\\s\\S]*$' '$1' | rr '\n {32}' ' ' -T | rr '^  (-.+?), (--[^ ]+) *' '`€1` | `€2` | '"
   },
   "keywords": [
     "replace",
