--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "2.4.1",
+  "version": "2.5.0",
   "description": "Flexible CLI regex replace in files.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -22,8 +22,9 @@
     "test-cli": "npm -g install ./ && bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
     "prepack": "git pull && npm test ",
-    "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag",
-    "options.md":"rr -h | rr '^[\\s\\S]*Options:([\\s\\S]*)Examples:[\\s\\S]*$' '$1' | rr '\n {32}' ' ' -T | rr '^  (-.+?), (--[^ ]+) *' '`€1` | `€2` | '"
+    "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
+    "QQQoptions.md":"rr -h | rr '^[\\s\\S]*Options:([\\s\\S]*)Examples:[\\s\\S]*$' '$1' | rr '\n {32}' ' '  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | `€2` | ' | rr '(---- . ---- . ----\n)[\\s\\S]*?(?=\n## Good to know)' 'console.log(€1 + _pipe + €2)' readme.md -RoJQ",
+    "options.md":"rr -h | rr '^[\\s\\S]*Options:([\\s\\S]*)Examples:[\\s\\S]*$' '$1' | rr '\n {32}' ' '  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | `€2` | ' -o"
   },
   "keywords": [
     "replace",
