--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "2.5.2",
+  "version": "2.5.3-dev",
   "description": "Flexible CLI regex replace in files.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
