--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "3.0.1",
+  "version": "3.0.2-dev",
   "description": "Flexible CLI regex replace in files.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -21,13 +21,19 @@
     "test-js": "echo todo: async mocha",
     "test-cli": "npm -g install ./ && bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
-    "prepack": "git pull && npm test && npm run options",
+    "prepack": "git pull && npm test && npm run load-options",
     "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
-    "options": "rr -h | rr 'Options:([\\s\\S]+)Examples:' _ -m | rr '\n {26,}' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----\n)[\\s\\S]*?(\n## Good to know)' '€1 + _pipe + €2' readme.md -jT"
+    "load-options": "rr -h | rr 'Options:([\\s\\S]+)Examples:' _ -m | rr '\n {26,}' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----\n)[\\s\\S]*?(\n## Good to know)' '€1 + _pipe + €2' readme.md -jT",
+    "halt-on-changes": "bash -c \"[[ 0 == $(git diff --numstat -- ./src ':(exclude)package-lock.json' | wc -l | tr -d ' ') ]] && echo 'All good (No changes found)' && exit 0 || echo 'Oh! Changes found. Did you forget to ´npm run format´?' && git diff -- ./src ':(exclude)package-lock.json' | cat && exit 1\"",
+    "test-format": "npm run format && npm run halt-on-changes",
+    "format": "prettier './src/**/*.js' --write"
+
   },
   "keywords": [
     "replace",
     "regex",
+    "regexp",
+    "regular expression",
     "sed"
   ],
   "devDependencies": {
@@ -35,7 +41,8 @@
     "babel-cli": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
     "browserify": "^14.1.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "prettier": "^1.12.1"
   },
   "directories": {
     "test": "test"
@@ -44,5 +51,13 @@
     "chalk": "^1.1.3",
     "globs": "^0.1.3",
     "yargs": "^7"
+  },
+  "prettier": {
+    "useTabs": true,
+    "printWidth": 100,
+    "singleQuote": true,
+    "arrowParens": "always",
+    "bracketSpacing": false,
+    "trailingComma": "es5"
   }
 }
