--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,15 @@ node_js:
   - "7"
   - "6"
 
+
+
 script:
   - npm run test-format
   - npm run test-cli
+
+
+before_install:
+- '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+- npm install -g greenkeeper-lockfile
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
