--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript2": "^0.15.0",
     "rollup-plugin-uglify": "^4.0.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "yarn": "^1.9.4"
   },
   "directories": {
     "test": "test"
