Manual test of PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ script:
 
 before_install:
 - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
-- npm install -g greenkeeper-lockfile
+- npm install -g greenkeeper-lockfile@2
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
