--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "test-minify": "npm run build-minify && npm run test-cli && npm run test-js",
     "test": "npm run build && npm run test-cli && npm run test-js",
     "postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
-    "build": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
+    "build": "npm run build-only",
+    "build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
     "build-minify": "npm run build && npm run minify",
     "minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && google-closure-compiler-js bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
     "prebuild": "rm -fr bin && npm run format",
     "test-js": "echo todo: async mocha",
-	"test-cli": "npm uninstall -g rexreplace && npm -g install ./ && npm run test-cli-only",
-	"test-cli-only":"bash test/cli/run.sh",
+    "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && npm run test-cli-only",
+    "test-cli-only": "bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
     "prepublishOnly": "git pull && npm run test-minify && npm run load-options",
     "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
@@ -48,8 +49,8 @@
     "google-closure-compiler-js": "^20181210.0.0",
     "mocha": "^5.2.0",
     "prettier": "^1.12.1",
+    "re2": "^1.8.3",
     "rollup": "^1.0.0",
-    "rollup-plugin-typescript3": "^1.1.2",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-commonjs": "^9.1.0",
@@ -60,6 +61,7 @@
     "rollup-plugin-progress": "^0.4.0",
     "rollup-plugin-re": "^1.0.7",
     "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-typescript3": "^1.1.2",
     "rollup-plugin-uglify": "^6.0.0",
     "typescript": "^3.0.3",
     "yarn": "^1.9.4"
