--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "rexreplace_ES6": "bin/ES6/cli.js"
   },
   "scripts": {
-    "test-minify": "npm run build-minify && npm run test-cli && npm run test-js",
-    "test": "npm run build && npm run test-cli && npm run test-js",
+    "test-minify": "run-s format build-minify global-install test-api",
+    "test": "run-s format build global-install test-api",
+    "prebuild": "rm -fr bin",
+    "build": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
     "postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
-    "build": "npm run build-only",
-    "build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
-    "build-minify": "npm run build && npm run minify",
+    "build-minify": "run-s build minify",
     "minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && google-closure-compiler-js bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
-    "prebuild": "rm -fr bin && npm run format",
-    "test-js": "echo todo: async mocha",
-    "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && npm run test-cli-only",
-    "test-cli-only": "bash test/cli/run.sh",
+    "global-install": "npm uninstall -g rexreplace && npm -g install ./",
+    "test-api": "bash test/cli/run.sh && mocha test/cli.js",
     "test-speed": "bash test/speed/run.sh",
-    "prepublishOnly": "git pull && npm run test-minify && npm run load-options",
-    "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
+    "test-man": "run-s build global-install",
+    "test-bin": "run-s global-install test-api",
+    "test-ci": "run-s test-format test-bin test-minify",
+    "prepublishOnly": "git pull && run-s test-minify load-options",
     "load-options": "rr -h | rr 'Options:([\\s\\S]+)Examples:' _ -m | rr '\n {26,}' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----\n)[\\s\\S]*?(\n## Good to know)' '€1 + _pipe + €2' readme.md -jT",
+    "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
     "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `npm run format` and try again.' && exit 1)",
     "format": "yarn prettier --write",
     "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'"
@@ -45,9 +46,11 @@
     "sed"
   ],
   "devDependencies": {
+    "@types/node": "^10.12.18",
     "assert": "^1.4.1",
     "google-closure-compiler-js": "^20181210.0.0",
     "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
     "re2": "^1.8.3",
     "rollup": "^1.0.0",
@@ -62,7 +65,8 @@
     "rollup-plugin-re": "^1.0.7",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript3": "^1.1.2",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-uglify": "TrySound/rollup-plugin-uglify",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.3",
     "yarn": "^1.9.4"
   },
@@ -72,6 +76,8 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "globs": "^0.1.4",
+    "replacestream": "^4.0.3",
+    "typescript-require": "^0.2.10",
     "yargs": "^12.0.2"
   },
   "prettier": {
