--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "4.1.1",
+  "version": "5.0.0-rc",
   "description": "Smooth search & replace in files from CLI.",
   "author": "Mathias Rangel Wulff",
   "license": "MIT",
@@ -24,7 +24,7 @@
     "build-minify": "run-s build minify",
     "minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && google-closure-compiler-js bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
     "global-install": "npm uninstall -g rexreplace && npm -g install ./",
-    "test-api": "bash test/cli/run.sh && mocha test/cli.js",
+    "test-api": "bash test/cli/run.sh && nyc mocha test/cli.js",
     "test-speed": "bash test/speed/run.sh",
     "test-man": "run-s build global-install",
     "test-bin": "run-s global-install test-api",
@@ -34,7 +34,8 @@
     "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
     "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `npm run format` and try again.' && exit 1)",
     "format": "yarn prettier --write",
-    "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'"
+    "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'",
+    "build-poc": "tsc src/poc.ts -t ES6 --outDir bin/ES6 && rollup -f iife bin/ES6/poc.js > bin/poc.js  "
   },
   "keywords": [
     "search",
@@ -52,13 +53,12 @@
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
-    "re2": "^1.8.3",
     "rollup": "^1.0.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-filesize": "^6.0.0",
-    "rollup-plugin-hashbang": "^1.0.1",
+    "rollup-plugin-hashbang": "^2.2.2",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-preserve-shebang": "^0.1.6",
     "rollup-plugin-progress": "^1.0.0",
@@ -75,7 +75,9 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "commander": "^2.19.0",
     "globs": "^0.1.4",
+    "nyc": "^13.1.0",
     "replacestream": "^4.0.3",
     "typescript-require": "^0.2.10",
     "yargs": "^12.0.2"
