--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "rexreplace_ES6": "bin/ES6/cli.js"
   },
   "scripts": {
-    "test-minify": "npm run build-minify && npm run test-cli && npm run test-js",
-    "test": "npm run build && npm run test-cli && npm run test-js",
+    "test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
+    "test": "yarn build && yarn test-cli && yarn test-js",
     "postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
-    "build": "npm run build-only",
+    "build": "yarn build-only",
     "build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
-    "build-minify": "npm run build && npm run minify",
+    "build-minify": "yarn build && yarn minify",
     "minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && google-closure-compiler-js bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
-    "prebuild": "rm -fr bin && npm run format",
+    "prebuild": "rm -fr bin && yarn format",
     "test-js": "echo todo: async mocha",
-    "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && npm run test-cli-only",
+    "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
     "test-cli-only": "bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
-    "prepublishOnly": "git pull && npm run test-minify && npm run load-options",
+    "prepublishOnly": "git pull && yarn test-minify && yarn load-options",
     "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
     "load-options": "rr -h | rr 'Options:([\\s\\S]+)Examples:' _ -m | rr '\n {26,}' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----\n)[\\s\\S]*?(\n## Good to know)' '€1 + _pipe + €2' readme.md -jT",
-    "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `npm run format` and try again.' && exit 1)",
+    "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
     "format": "yarn prettier --write",
     "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'"
   },
@@ -45,26 +45,27 @@
     "sed"
   ],
   "devDependencies": {
+    "@types/node": "^13.1.2",
     "assert": "^2.0.0",
     "google-closure-compiler-js": "^20190909.0.0",
-    "mocha": "^6.0.0",
-    "prettier": "^1.12.1",
-    "re2": "^1.10.3",
-    "rollup": "^1.23.0",
-    "rollup-plugin-buble": "^0.19.2",
+    "mocha": "6.2.2",
+    "prettier": "1.19.1",
+    "re2": "1.10.5",
+    "rollup": "1.27.14",
+    "rollup-plugin-buble": "0.19.8",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-filesize": "^6.0.0",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-filesize": "6.2.1",
     "rollup-plugin-hashbang": "^1.0.1",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-preserve-shebang": "^0.1.6",
-    "rollup-plugin-progress": "^1.0.0",
+    "rollup-plugin-progress": "1.1.1",
     "rollup-plugin-re": "^1.0.7",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-typescript3": "^1.1.2",
-    "rollup-plugin-uglify": "^6.0.0",
-    "typescript": "^3.0.3",
-    "yarn": "^1.9.4"
+    "rollup-plugin-uglify": "6.0.4",
+    "typescript": "3.7.4",
+    "yarn": "1.21.1"
   },
   "directories": {
     "test": "test"
