--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "sed"
   ],
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-buble": "0.20.0",
     "@rollup/plugin-replace": "^2.3.0",
     "@types/node": "^13.1.2",
     "assert": "^2.0.0",
