--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npx yarn test-format
+    - run: npx yarn install
+    - run: npx yarn test-format      
     - run: npx yarn test-cli
     - run: npx yarn test
