--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rexreplace",
-  "version": "5.2.1",
+  "version": "5.2.2",
   "description": "Smoothly search & replace in files from CLI.",
   "author": "Mathias Rangel Wulff",
   "funding": {
-    "paymail":"mwulff@moneybutton.com"
+    "paymail": "mwulff@moneybutton.com"
   },
   "license": "MIT",
   "main": "src/engine.js",
@@ -31,12 +31,14 @@
     "test-cli": "npm uninstall -g rexreplace && npm -g install ./ && yarn test-cli-only",
     "test-cli-only": "bash test/cli/run.sh",
     "test-speed": "bash test/speed/run.sh",
-    "prepublishOnly": "git pull && yarn test-minify && yarn load-options",
+    "prepublishOnly": "yarn is-git-clean && git pull && yarn test-minify && yarn load-options && yarn bump",
     "postpublish": "git add --all && git commit -m v$(node -e 'console.log(require(`./package.json`).version)') && git tag v$(node -e 'console.log(require(`./package.json`).version)') && git push && git push --tag && (open https://github.com/mathiasrw/rexreplace/releases || 1)",
     "load-options": "rr -h | rr 'Options:(.+)Examples:' _ -ms | rr '\\n {26,}|\\n\\n *' ' ' | rr \"'\" '`'  | rr '^  (-.+?), (--[^ ]+) *' '`€1` | **`€2`** ' | rr '(^---- . ----).+?(## Good to know)' '€1 + nl + pipe + nl + nl + €2' readme.md -jsT",
     "test-format": "yarn prettier --list-different || (echo 'Please correct file formatting using `yarn format` and try again.' && exit 1)",
     "format": "yarn prettier --write",
-    "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'"
+    "prettier": "prettier '{src,test}/**/*.{scss,css,js,ts}'",
+    "bump": "yarn is-git-clean && bump --tag 'v%s'",
+    "is-git-clean": "(git diff --quiet --exit-code --cached && git diff --quiet --exit-code) || (echo Please commit or stash changes && exit 1)"
   },
   "keywords": [
     "search",
@@ -48,33 +50,34 @@
     "sed"
   ],
   "devDependencies": {
-    "@rollup/plugin-buble": "0.21.1",
-    "@rollup/plugin-replace": "2.3.1",
-    "@types/node": "13.9.3",
+    "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-replace": "2.3.2",
+    "@types/node": "14.0.1",
     "assert": "^2.0.0",
-    "google-closure-compiler-js": "20200315.0.0",
+    "google-closure-compiler-js": "20200504.0.0",
     "magic-string": "^0.25.7",
-    "mocha": "7.1.1",
-    "prettier": "2.0.2",
-    "re2": "1.10.5",
-    "rollup": "2.1.0",
+    "mocha": "7.1.2",
+    "prettier": "2.0.5",
+    "re2": "1.11.0",
+    "rollup": "2.9.1",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
-    "rollup-plugin-filesize": "6.2.1",
+    "rollup-plugin-filesize": "9.0.0",
     "rollup-plugin-hashbang": "2.2.2",
     "rollup-plugin-preserve-shebang": "^0.1.6",
-    "rollup-plugin-progress": "1.1.1",
+    "rollup-plugin-progress": "1.1.2",
     "rollup-plugin-typescript3": "^1.1.2",
     "rollup-plugin-uglify": "6.0.4",
-    "typescript": "3.8.3",
-    "yarn": "1.22.4"
+    "typescript": "3.9.2",
+    "yarn": "1.22.4",
+    "version-bump-prompt": "^5.0.5"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "7.1.1",
-    "chalk": "3.0.0",
+    "@rollup/plugin-commonjs": "11.1.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
+    "chalk": "4.0.0",
     "globs": "0.1.4",
     "yargs": "15.3.1"
   },
