--- a/package.json
+++ b/package.json
@@ -52,31 +52,31 @@
   "devDependencies": {
     "@rollup/plugin-buble": "0.21.3",
     "@rollup/plugin-replace": "2.3.2",
-    "@types/node": "14.0.1",
+    "@types/node": "14.0.5",
     "assert": "^2.0.0",
-    "google-closure-compiler-js": "20200504.0.0",
+    "google-closure-compiler-js": "20200517.0.0",
     "magic-string": "^0.25.7",
-    "mocha": "7.1.2",
+    "mocha": "7.2.0",
     "prettier": "2.0.5",
-    "re2": "1.11.0",
-    "rollup": "2.9.1",
+    "re2": "1.14.0",
+    "rollup": "2.10.9",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-filesize": "9.0.0",
     "rollup-plugin-hashbang": "2.2.2",
-    "rollup-plugin-preserve-shebang": "^0.1.6",
+    "rollup-plugin-preserve-shebang": "1.0.0",
     "rollup-plugin-progress": "1.1.2",
     "rollup-plugin-typescript3": "^1.1.2",
     "rollup-plugin-uglify": "6.0.4",
-    "typescript": "3.9.2",
-    "yarn": "1.22.4",
-    "version-bump-prompt": "^5.0.5"
+    "typescript": "3.9.3",
+    "version-bump-prompt": "6.0.3",
+    "yarn": "1.22.4"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "11.1.0",
-    "@rollup/plugin-node-resolve": "7.1.3",
+    "@rollup/plugin-commonjs": "12.0.0",
+    "@rollup/plugin-node-resolve": "8.0.0",
     "chalk": "4.0.0",
     "globs": "0.1.4",
     "yargs": "15.3.1"
