--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "bin": {
     "rr": "bin/rexreplace.cli.min.js",
     "rexreplace": "bin/rexreplace.cli.min.js",
-    "rexreplace_unmin": "bin/rexreplace.cli.js",
-    "rexreplace_ES6": "bin/ES6/cli.js"
+    "rexreplace_unmin": "bin/rexreplace.cli.js"
   },
   "scripts": {
     "test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
@@ -52,7 +51,7 @@
   "devDependencies": {
     "@rollup/plugin-buble": "0.21.3",
     "@rollup/plugin-replace": "2.3.2",
-    "@types/node": "14.0.5",
+    "@types/node": "^14.0.5",
     "assert": "^2.0.0",
     "google-closure-compiler-js": "20200517.0.0",
     "magic-string": "^0.25.7",
@@ -69,14 +68,14 @@
     "rollup-plugin-uglify": "6.0.4",
     "typescript": "3.9.3",
     "version-bump-prompt": "6.0.3",
+    "@rollup/plugin-commonjs": "12.0.0",
+    "@rollup/plugin-node-resolve": "8.0.0",
     "yarn": "1.22.4"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "12.0.0",
-    "@rollup/plugin-node-resolve": "8.0.0",
     "chalk": "4.0.0",
     "globs": "0.1.4",
     "yargs": "15.3.1"
