--- a/package.json
+++ b/package.json
@@ -50,14 +50,16 @@
   ],
   "devDependencies": {
     "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-commonjs": "13.0.0",
+    "@rollup/plugin-node-resolve": "8.0.1",
     "@rollup/plugin-replace": "2.3.3",
-    "@types/node": "^14.0.5",
+    "@types/node": "14.0.13",
     "assert": "^2.0.0",
     "google-closure-compiler-js": "20200517.0.0",
     "magic-string": "^0.25.7",
     "mocha": "7.2.0",
     "prettier": "2.0.5",
-    "re2": "1.14.0",
+    "re2": "1.15.0",
     "rollup": "2.15.0",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-filesize": "9.0.0",
@@ -68,8 +70,6 @@
     "rollup-plugin-uglify": "6.0.4",
     "typescript": "3.9.5",
     "version-bump-prompt": "6.0.3",
-    "@rollup/plugin-commonjs": "13.0.0",
-    "@rollup/plugin-node-resolve": "8.0.1",
     "yarn": "1.22.4"
   },
   "directories": {
