--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -43,7 +43,7 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: github/super-linter@v2.0.0
+        uses: docker://github/super-linter:v2.0.0
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_YAML: true
