--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,3 @@
-.rpt2_cache/*
 test/*
 src/*
 gfx/*
@@ -6,3 +5,7 @@ rollup.config.js
 greenkeeper.json
 tmp/*
 package-lock.json
+.*/
+*.log
+*.txt
+*.file
