--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@znemz/rexreplace",
-	"version": "6.1.2",
+	"version": "6.1.3",
 	"description": "Smoothly search & replace in files from CLI.",
 	"author": "Mathias Rangel Wulff",
 	"funding": {
@@ -19,12 +19,11 @@
 	},
 	"scripts": {
 		"test": "yarn build && yarn test-cli && yarn test-js",
-		"postbuild": "cp bin/rexreplace.cli.js bin/rexreplace.cli.min.js",
 		"version": "yarn build-minify",
 		"build": "yarn build-only",
 		"build-only": "tsc src/cli --outDir bin/ES6 -t ES6 && rollup -c",
 		"build-minify": "yarn build && yarn minify",
-		"minify": "echo '#!/usr/bin/env node' > bin/rexreplace.cli.min.js && google-closure-compiler-js bin/rexreplace.cli.js >> bin/rexreplace.cli.min.js",
+		"minify": "uglifyjs --compress --mangle -- bin/rexreplace.cli.js > bin/rexreplace.cli.min.js",
 		"prebuild": "rm -fr bin && yarn format",
 		"test-js": "echo todo: async mocha",
 		"test-minify": "yarn build-minify && yarn test-cli && yarn test-js",
@@ -56,7 +55,6 @@
 		"@rollup/plugin-replace": "2.4.2",
 		"@types/node": "15.12.2",
 		"assert": "^2.0.0",
-		"google-closure-compiler-js": "20200719.0.0",
 		"magic-string": "^0.25.7",
 		"mocha": "9.0.0",
 		"prettier": "2.3.1",
@@ -68,6 +66,7 @@
 		"rollup-plugin-progress": "1.1.2",
 		"rollup-plugin-typescript3": "^1.1.2",
 		"typescript": "4",
+		"uglify-js": "^3.13.10",
 		"version-bump-prompt": "6.1.0",
 		"yarn": "1.22.10"
 	},
