--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rexreplace",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "description": "Smoothly search & replace in files from CLI.",
   "author": "Mathias Rangel Wulff",
   "funding": {
@@ -54,20 +54,20 @@
     "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@types/node": "15.12.2",
+    "@types/node": "16.0.0",
     "assert": "^2.0.0",
     "google-closure-compiler-js": "20200719.0.0",
     "magic-string": "^0.25.7",
     "mocha": "9.0.0",
-    "prettier": "2.3.1",
-    "rollup": "2.51.2",
+    "prettier": "2.3.2",
+    "rollup": "2.52.7",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-filesize": "9.1.1",
     "rollup-plugin-hashbang": "2.2.2",
     "rollup-plugin-preserve-shebang": "1.0.1",
     "rollup-plugin-progress": "1.1.2",
-    "rollup-plugin-typescript3": "^1.1.2",
-    "typescript": "4",
+    "rollup-plugin-typescript3": "1.1.3",
+    "typescript": "4.3.5",
     "version-bump-prompt": "6.1.0",
     "yarn": "1.22.10"
   },
@@ -77,7 +77,6 @@
   "dependencies": {
     "chalk": "4.1.1",
     "globs": "0.1.4",
-    "re2": "1.16.0",
     "yargs": "16.2.0"
   },
   "prettier": {
