--- a/package.json
+++ b/package.json
@@ -52,29 +52,30 @@
   "devDependencies": {
     "@rollup/plugin-buble": "0.21.3",
     "@rollup/plugin-commonjs": "20.0.0",
-    "@rollup/plugin-node-resolve": "13.0.4",
+    "@rollup/plugin-node-resolve": "13.0.6",
     "@rollup/plugin-replace": "3.0.0",
-    "@types/node": "16.4.10",
+    "@types/node": "16.11.4",
     "assert": "^2.0.0",
     "google-closure-compiler-js": "20200719.0.0",
     "magic-string": "^0.25.7",
-    "mocha": "9.0.3",
-    "prettier": "2.3.2",
-    "rollup": "2.55.1",
+    "mocha": "9.1.3",
+    "prettier": "2.4.1",
+    "rollup": "2.58.0",
     "rollup-plugin-closure-compiler-js": "^1.0.6",
     "rollup-plugin-filesize": "9.1.1",
     "rollup-plugin-hashbang": "2.2.2",
     "rollup-plugin-preserve-shebang": "1.0.1",
     "rollup-plugin-progress": "1.1.2",
     "rollup-plugin-typescript3": "1.1.3",
-    "typescript": "4.3.5",
+    "typescript": "4.4.4",
     "version-bump-prompt": "6.1.0",
-    "yarn": "1.22.11"
+    "yarn": "1.22.17"
   },
   "directories": {
     "test": "test"
   },
   "dependencies": {
+    "ansi-regex": "5.0.1",
     "globs": "0.1.4",
     "yargs": "16.2.0"
   },
