--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "7.1.2",
   "description": "Smoothly search & replace in files from CLI.",
   "author": "Mathias Rangel Wulff",
-  "funding": {
-    "paymail": "mwulff@moneybutton.com"
-  },
   "license": "MIT",
   "main": "src/engine.js",
   "repository": {
@@ -70,8 +67,8 @@
     "yarn": "1.22.19"
   },
   "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "tough-cookie": "^4.1.3"
+    "ansi-regex": "5.0.1",
+    "tough-cookie": "4.1.3"
   },
   "directories": {
     "test": "test"
